finished all pages for mobile version and fixed position div with class order on mobile version

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1477,10 +1477,15 @@ footer {
     .order-now-price {
         font-size: 18px;
         width: 50%;
+        margin-right: 0;
     }
 
     .order {
         width: 50%;
+        -webkit-box-pack: end;
+        -webkit-justify-content: flex-end;
+            -ms-flex-pack: end;
+                justify-content: flex-end;
     }
 
     .btn-radius {
